Fix issues in heading spacing not matching

--- a/packages/settings-page/src/restrictions-view/editor.scss
+++ b/packages/settings-page/src/restrictions-view/editor.scss
@@ -11,8 +11,6 @@ $gap4: $gap * 4;
 		margin-bottom: 30px;
 
 		.view-title {
-			margin: 0;
-			line-height: 1;
 		}
 
 		.item-count {
@@ -416,8 +414,6 @@ $gap4: $gap * 4;
 }
 
 .restriction-list {
-	padding: 10px 0;
-
 	> * {
 		margin-bottom: 10px;
 	}
