--- a/packages/settings-page/src/settings-view/editor.scss
+++ b/packages/settings-page/src/settings-view/editor.scss
@@ -13,7 +13,6 @@
 			margin-bottom: 10px;
 
 			.wp-heading-inline {
-				font-size: 1.875em;
 				margin-right: auto;
 			}
 
